k8s/apps/forgejo/app/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: forgejo
spec:
  ports:
    - port: 3000
      name: http
    - port: 2222
      name: ssh
      targetPort: 22
  selector:
    app: forgejo
  type: ClusterIP
