k8s/apps/forgejo/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  namespace: forgejo
  annotations:
    external-dns.alpha.kubernetes.io/hostname: git.${CLUSTER_DOMAIN}
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - git.${CLUSTER_DOMAIN}
      secretName: forgejo-tls
  rules:
    - host: git.${CLUSTER_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: forgejo
                port:
                  number: 3000
            path: /
            pathType: Prefix
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: forgejo-ssh
  namespace: forgejo
spec:
  entryPoints:
    - git-ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: forgejo
          port: 22
